# ferridriver

./: .gitignore  .mcp.json  AUDIT-salvage-85caf505.md  AUDIT-salvage-bd270192.md  BDD_TODO.md  BENCHMARKING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  HANDOVER.md  PERF_AUDIT.md  PLAYWRIGHT_COMPAT.md  README.md  _typos.toml  bunfig.toml  cliff.toml  clippy.toml  ferridriver.config.ts  ferridriver.toml  install.sh  justfile  mcp-config.json  package.json  rust-toolchain.toml  rustfmt.toml
crates/ferridriver/: Cargo.toml  README.md  build.rs
crates/ferridriver-bdd/: Cargo.toml  README.md
crates/ferridriver-bdd-macros/: Cargo.toml  README.md
crates/ferridriver-bdd-macros/src/: lib.rs
crates/ferridriver-bdd/benches/: scenario_clone.rs
crates/ferridriver-bdd/src/: data_table.rs  executor.rs  expression.rs  feature.rs  filter.rs  hook.rs  js.rs  lib.rs  param_type.rs  registry.rs  scenario.rs  snippet.rs  step.rs  translate.rs  world.rs
crates/ferridriver-bdd/tests/: extension_steps_merge.rs  js_steps.rs  load_bench.rs  scripting_caps_off.rs  scripting_caps_on.rs  ts_expect_steps.rs  ts_steps.rs
crates/ferridriver-cli/: Cargo.toml  README.md  build.rs
crates/ferridriver-cli/src/: cli.rs  main.rs  mcp.rs  params.rs  server.rs  session_cmd.rs
crates/ferridriver-cli/tests/: backends.rs  binding_coverage.rs  connect_mcp.rs  run_command.rs  session_command.rs  sidecars.rs  ui_mode.rs
crates/ferridriver-config/: Cargo.toml  README.md
crates/ferridriver-config/src/: command_spec.rs  lib.rs  mcp.rs  test.rs
crates/ferridriver-ct-dioxus/: Cargo.toml  README.md
crates/ferridriver-ct-dioxus/src/: lib.rs
crates/ferridriver-ct-leptos/: Cargo.toml  README.md
crates/ferridriver-ct-leptos/src/: lib.rs
crates/ferridriver-expect/: Cargo.toml  README.md
crates/ferridriver-expect/src/: api_response.rs  asymmetric.rs  builder.rs  diff.rs  lib.rs  locator.rs  page.rs  poll.rs  throw.rs  value.rs
crates/ferridriver-mcp/: Cargo.toml  README.md  build.rs
crates/ferridriver-mcp/src/: bdd_engine.rs  config.rs  lib.rs  mcp.rs  params.rs  server.rs
crates/ferridriver-napi/: .gitignore  Cargo.toml  README.md  build.rs  package.json
crates/ferridriver-napi/src/: api_request.rs  bdd_registry.rs  bdd_runner.rs  browser.rs  codegen.rs  context.rs  frame.rs  install.rs  lib.rs  locator.rs  page.rs  route.rs  test_fixtures.rs  test_info.rs  test_runner.rs  transform.rs  types.rs
crates/ferridriver-napi/test/: benchmark-results.csv  benchmark.ts  browser.test.ts  debug-events.ts  debug.ts  frame-events.test.ts  injected-verify.test.ts  napi-overhead.ts  playwright.bench.ts  roundtrip-analysis.ts
crates/ferridriver-node/: Cargo.toml  README.md  build.rs  package.json  postinstall.js
crates/ferridriver-node/src/: api_request.rs  browser.rs  browser_type.rs  cdp_session.rs  clock.rs  codegen.rs  context.rs  dialog.rs  disposable.rs  download.rs  element_handle.rs  error.rs  file_chooser.rs  frame.rs  frame_locator.rs  http_client.rs  install.rs  js_handle.rs  js_reporter.rs  lib.rs  locator.rs  network.rs  page.rs  route.rs  serialize_out.rs  step_handle.rs  test_fixtures.rs  test_info.rs  test_runner.rs  tracing.rs  types.rs  web_error.rs  web_socket_route.rs  web_storage.rs
crates/ferridriver-node/test/: _test-helpers.ts  accessible-description.test.ts  api-response.test.ts  aria-snapshot.test.ts  benchmark-results.csv  benchmark.ts  binding-surface.test.ts  browser-bind.test.ts  browser-context-options.test.ts  browser-page-close.test.ts  browser.test.ts  builtin-fixtures.test.ts  cdp-session.test.ts  cli-flags.test.ts  clock.test.ts  cluster7-flags.test.ts  context-events.test.ts  context-storage-state.test.ts  debug.ts  dialog.test.ts  download.test.ts  expect-extend-toBeOK.test.ts  expect-soft-runner.test.ts  filechooser.test.ts  frame-events.test.ts  frame-waitforselector.test.ts  handles.test.ts  injected-verify.test.ts  js-reporter.test.ts  keyboard-type-named-keys.test.ts  locator-and-or.test.ts  locator-attr-waitfor.test.ts  locator-drop.test.ts  locator-handler.test.ts  locator-highlight.test.ts  locator-normalize.test.ts  locator-strict.test.ts  merge-reports.test.ts  napi-vs-native.ts  navigation-response.test.ts  (+17 more)
crates/ferridriver-script/: Cargo.toml  README.md
crates/ferridriver-script/src/: bundle.rs  bytecode_cache.rs  command_spec.rs  console.rs  discover.rs  engine.rs  error.rs  fs.rs  lib.rs  modules.rs  result.rs  runtime_modules.rs  session_procs.rs  session_table.rs  sidecar.rs  vars.rs  vm.rs
crates/ferridriver-script/tests/: bdd_attach.rs  binding_convert_bench.rs  binding_convert_roundtrip.rs  binding_surface_e2e.rs  bundler_shims.rs  bytecode_cache.rs  commands.rs  crypto_api.rs  execute_module.rs  expect_api.rs  extension_bench.rs  extension_policy.rs  fetch_api.rs  integration.rs  long_session_reliability.rs  native_module_bench.rs  node_compat_modules.rs  plugin_bench.rs  process_shim.rs  session.rs  sidecar.rs  sidecar_attrib.rs  sidecar_bench.rs  smoke.rs  vm_teardown.rs
crates/ferridriver-session/: Cargo.toml
crates/ferridriver-session/src/: bind.rs  browser_dispatch.rs  client.rs  dispatch.rs  lib.rs  protocol.rs  registry.rs  server.rs  transport.rs
crates/ferridriver-test/: Cargo.toml  README.md  build.rs
crates/ferridriver-test-macros/: Cargo.toml  README.md
crates/ferridriver-test-macros/src/: lib.rs
crates/ferridriver-test/src/: config.rs  context.rs  discovery.rs  dispatcher.rs  fixture.rs  interactive.rs  lib.rs  logging.rs  model.rs  retry.rs  runner.rs  server.rs  shard.rs  snapshot.rs  tracing.rs  tui.rs  tui_reporter.rs  ui_server.rs  watch.rs  worker.rs
crates/ferridriver-test/tests/: bench_lazy_browser.rs  bench_napi_compare.rs  (+15 more)
crates/ferridriver-webkit-host/: Cargo.toml  README.md  build.rs
crates/ferridriver-webkit-wire/: Cargo.toml  README.md
examples/bdd-example/: Cargo.toml
examples/ct-dioxus-todomvc/: Cargo.toml  Dioxus.toml
examples/ct-leptos/: Cargo.toml  index.html
examples/ct-leptos-todomvc/: Cargo.toml  README.md  index.html
examples/rust-e2e/: Cargo.toml
(+660 files in other folders)
