[package]
name = "chromey-mcp"
version = "0.1.0"
edition = "2021"
description = "High-performance browser automation MCP server powered by chromey + Rust"

[dependencies]
chromey = { version = "2", default-features = false }
rmcp = { version = "1.2", features = ["server", "transport-io", "transport-streamable-http-server", "tower"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
axum = "0.8"
tokio-util = "0.7"
regex = "1"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
