[workspace]
resolver = "2"
members = ["crates/*", "examples/ct-leptos-todomvc", "examples/ct-dioxus-todomvc", "examples/bdd-example"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT OR Apache-2.0"
authors = ["Salama Ashoush <salamaashoush@gmail.com>"]
repository = "https://github.com/salamaashoush/ferridriver"
homepage = "https://github.com/salamaashoush/ferridriver"
readme = "README.md"
keywords = ["browser", "automation", "playwright", "cdp", "testing"]
categories = ["development-tools::testing", "web-programming"]

[workspace.lints.rust]
unsafe_code = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
dbg_macro = "warn"

[workspace.dependencies]
ferridriver = { path = "crates/ferridriver" }
ferridriver-mcp = { path = "crates/ferridriver-mcp" }
ferridriver-test = { path = "crates/ferridriver-test" }
ferridriver-test-macros = { path = "crates/ferridriver-test-macros" }
ferridriver-bdd = { path = "crates/ferridriver-bdd" }
ferridriver-bdd-macros = { path = "crates/ferridriver-bdd-macros" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
regex = "1"
async-trait = "0.1"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-chrome = "0.7"
console-subscriber = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.4", features = ["server", "transport-io", "transport-streamable-http-server", "tower"] }
schemars = "1"
axum = "0.8"
tokio-util = "0.7"
dashmap = "6"
arc-swap = "1"
mimalloc = { version = "0.1", default-features = false }
config = { version = "0.15", default-features = false, features = ["toml", "json", "yaml"] }
shellexpand = "3"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = false

[profile.dev]
debug = false
