[package]
name = "ferridriver-cli"
description = "ferridriver CLI -- browser automation command-line tool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ferridriver"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ferridriver-mcp = { path = "../ferridriver-mcp" }
ferridriver-test = { workspace = true }
ferridriver-bdd = { workspace = true }
ferridriver = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
base64 = { workspace = true }
