[package]
name = "ferridriver-cli"
description = "ferridriver CLI -- MCP server for browser automation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ferridriver"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ferridriver-mcp = { workspace = true }
ferridriver-script = { workspace = true }
ferridriver-config = { workspace = true }
ferridriver-test = { workspace = true }
ferridriver-bdd = { workspace = true }
ferridriver = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mimalloc = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
base64 = { workspace = true }
tokio-tungstenite = "0.29"
futures = { workspace = true }
tempfile = "3"
libc = "0.2"
