[package]
name = "ferridriver-ct-dioxus"
description = "Ferridriver component testing adapter for Dioxus — #[component_test] for cargo test"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ferridriver-test = { path = "../ferridriver-test" }
ferridriver = { path = "../ferridriver" }
ferridriver-ct-dioxus-macros = { path = "../ferridriver-ct-dioxus-macros" }
tokio = { version = "1", features = ["full", "sync"] }
inventory = "0.3"
