[package]
name = "ferridriver-ct-leptos"
description = "Ferridriver component testing adapter for Leptos — #[component_test] for cargo test"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ferridriver-test = { path = "../ferridriver-test" }
ferridriver = { path = "../ferridriver" }
ferridriver-ct-leptos-macros = { path = "../ferridriver-ct-leptos-macros" }
tokio = { version = "1", features = ["full", "sync"] }
inventory = "0.3"
