[package]
name = "ferridriver-mcp"
description = "ferridriver MCP server library -- browser automation via Model Context Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
ferridriver = { workspace = true }
ferridriver-script = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
rustc-hash = "2"
anyhow = { workspace = true }
axum = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
config = { workspace = true }
shellexpand = { workspace = true }
dirs = { workspace = true }
