[package]
name = "ferridriver-napi"
description = "NAPI-RS native addon exposing ferridriver browser automation to Node.js"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ferridriver = { workspace = true }
ferridriver-test = { workspace = true }

napi = { version = "3", features = ["async", "napi9", "serde-json"] }
napi-derive = "3"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = "2"
async-channel = "2"

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
