[package]
name = "ferridriver-napi"
description = "NAPI-RS native addon exposing ferridriver browser automation to Node.js"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ferridriver = { workspace = true }
ferridriver-test = { workspace = true }
ferridriver-bdd = { workspace = true }

napi = { version = "3", features = ["async", "napi9", "serde-json"] }
napi-derive = "3"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
rustc-hash = "2"
tracing = { workspace = true }
mimalloc = { workspace = true }
async-channel = "2"

[features]
profiling = ["ferridriver-test/profiling"]

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
