[package]
name = "ferridriver-node"
description = "NAPI-RS native addon exposing ferridriver browser automation to Node.js"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ferridriver = { workspace = true }

napi = { version = "3", features = ["async", "napi9", "serde-json"] }
napi-derive = "3"

tokio = { workspace = true }
serde_json = { workspace = true }
rustc-hash = "2"
tracing = { workspace = true }
mimalloc = { workspace = true }
base64 = { workspace = true }

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
