[package]
name = "ferridriver-script"
description = "Sandboxed QuickJS scripting engine for ferridriver. Runs JS scripts against Page/Browser/Context with bound args, per-call isolation, scoped fs, and structured errors."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
ferridriver = { workspace = true }
ferridriver-config = { workspace = true }
ferridriver-expect = { workspace = true }
ferridriver-session = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rustc-hash = "2"
dashmap = { workspace = true }
libc = { workspace = true }
base64 = { workspace = true }
url = "2"

# Direct serde <-> rquickjs::Value (no serde_json::Value middle-hop).
# Correct number coercion (integral float -> int via serde visitors),
# undefined/function drop parity, Proxy + cycle handling.
rquickjs-serde = "0.6"

# `full-async` does NOT imply `parallel`; without it the AsyncRuntime is
# !Send/!Sync and the cross-task route/exposeFunction closures (which
# must be `Arc<dyn Fn + Send + Sync>`) fail to compile. Keep `parallel`.
# Timers / URLSearchParams / the console renderer are native modules in
# `bindings/` (formerly the rquickjs-extra crates, which capped rquickjs
# at <0.12).
rquickjs = { version = "0.12", features = ["full-async", "parallel", "macro", "loader", "array-buffer"] }

# Step-file front-end: rolldown bundles + tree-shakes + transpiles TS to
# one ESM module (resolving node_modules), which is compiled to QuickJS
# bytecode once.
rolldown = "1"
rolldown_common = "1"
rolldown_plugin = "1"
# Remap QuickJS error line:col (bundled output) back to original .ts/.js.
sourcemap = "9"
getrandom = "0.4"
sha1 = "0.11"
sha2 = "0.11"
hmac = "0.13"
subtle = "2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
# Convert round-trip test drives rquickjs directly; it is a runtime dep
# but integration tests are separate crates and cannot name a lib-only
# dependency, so it is mirrored here.
rquickjs = { version = "0.12", features = ["full-async", "parallel", "macro", "loader", "array-buffer"] }
