[package]
name = "ferridriver-session"
description = "Session registry, IPC server, and CLI client for binding live ferridriver browsers to named sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
ferridriver = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
rustc-hash = "2"
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
