[package]
name = "ferridriver-test-macros"
description = "Proc macros for the ferridriver E2E test framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
