[package]
name = "ferridriver-test"
description = "High-performance E2E test runner for ferridriver (Playwright-compatible)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
ferridriver = { workspace = true }
ferridriver-test-macros = { path = "../ferridriver-test-macros" }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }

async-channel = "2"
inventory = "0.3"
rustc-hash = "2"
toml = "0.8"
glob = "0.3"
console = "0.15"
quick-xml = "0.37"
similar = "2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_28"] }
axum = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
http = "1"

[[bin]]
name = "bench-profile"
path = "src/bin/bench_profile_bin.rs"

[[bin]]
name = "bench-single"
path = "src/bin/bench_single.rs"
