[package]
name = "ferridriver-webkit-wire"
description = "Wire-level binary IPC protocol shared between the ferridriver WebKit host (macOS Obj-C / Linux GTK4) and the parent process."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
