[package]
name = "ferridriver"
description = "High-performance browser automation library with pluggable backends"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = "0.24"
rustc-hash = "2"

[build-dependencies]
cc = "1"

