[package]
name = "ferridriver"
description = "High-performance browser automation library with pluggable backends"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = "0.24"
rustc-hash = "2"
arc-swap = { workspace = true }
ffmpeg-next = "8.1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "cookies", "rustls-tls"] }
bytes = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Pipes"] }

[build-dependencies]
cc = "1"

