[package]
name = "ferridriver"
description = "High-performance browser automation library with pluggable backends"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = "0.29"
rustc-hash = "2"
arc-swap = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "cookies", "rustls-no-provider", "stream", "query", "form"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
bytes = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
tokio-stream = "0.1"
dirs = "6"
tempfile = "3"
tar = "0.4"
xz2 = "0.1"
bzip2 = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Pipes"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[build-dependencies]
cc = "1"

[[bench]]
name = "alloc_bench"
harness = false

