[package]
name = "ct-dioxus-todomvc"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }

[dev-dependencies]
ferridriver-ct-dioxus = { path = "../../crates/ferridriver-ct-dioxus" }
ferridriver = { path = "../../crates/ferridriver" }
ferridriver-test = { path = "../../crates/ferridriver-test" }
tokio = { version = "1", features = ["full"] }

[[test]]
name = "todomvc"
harness = false
