[package]
name = "ct-dioxus-todomvc"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
dioxus = { version = "0.7", features = ["web"] }

[dev-dependencies]
ferridriver = { path = "../../crates/ferridriver" }
ferridriver-test = { path = "../../crates/ferridriver-test" }
ferridriver-test-macros = { path = "../../crates/ferridriver-test-macros" }
inventory = "0.3"
tokio = { version = "1", features = ["full"] }
