[package]
name = "ct-leptos-todomvc"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[dev-dependencies]
ferridriver = { path = "../../crates/ferridriver" }
ferridriver-test = { path = "../../crates/ferridriver-test" }
ferridriver-test-macros = { path = "../../crates/ferridriver-test-macros" }
tokio = { version = "1", features = ["full"] }
