[package]
name = "ct-leptos-example"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
ferridriver-ct-leptos = { path = "../../crates/ferridriver-ct-leptos" }
ferridriver = { path = "../../crates/ferridriver" }
tokio = { version = "1", features = ["full"] }
